Added the fake agents and now the distance between the robot and the person is updating

--- a/agents/concept_bottle/etc/config
+++ b/agents/concept_bottle/etc/config
@@ -1,6 +1,9 @@
 # This property is used by the clients to connect to IceStorm.
 Proxies.TopicManager = "IceStorm/TopicManager:default -p 9999"
 
+# Proxies for required interfaces
+Proxies.Webots2Robocomp = "webots2robocomp:tcp -h localhost -p 10006"
+
 # Endpoints for subscriptions interfaces
 Endpoints.VisualElementsPubTopic = "tcp -p 0"
 Endpoints.VisualElementsPubPrefix = ""
